kubernetes/infrastructure/base/external-ingress/truenas/ingressroute.yaml
# HTTPS IngressRoute
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: truenas-https-ingress
  namespace: external-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`truenas.sluxcloud.com`)
      kind: Rule
      services:
        - name: truenas-endpoint
          port: 443
          scheme: https
          passHostHeader: true
          serversTransport: truenas-transport
  tls:
    secretName: sluxcloud-wildcard-cert
---
# HTTP Redirect IngressRoute
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: truenas-http-ingress
  namespace: external-ingress
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`truenas.sluxcloud.com`)
      kind: Rule
      middlewares:
        - name: https-redirect
          namespace: external-ingress
      services:
        - name: truenas-endpoint
          port: 80
          scheme: http
          passHostHeader: true
